[package]
name = "crawler2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.4.0"
aws-sdk-dynamodb = "1.28.0"
reqwest = { version = "0.12.4", features = ["json"] }
scraper = "0.19.0"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
urlencoding = "2.1.3"
